# lab-scale-ai

./: .dockerignore  .gitignore  Dockerfile  GETTING_STARTED.md  README.md  evaluate_summarization.py  finetune_lora_summarization.py  openai_chat_api.py  pyproject.toml  requirements.txt  train_from_recipe.sh
tasks/: Llama-2-7b-chat-hf_finetuned_model_outputs.npy  Llama-2-7b-chat-hf_pretrained_model_outputs.npy  Mistral-7B-Instruct-v0.1_finetuned_model_outputs.npy  Mistral-7B-Instruct-v0.1_pretrained_model_outputs.npy  evaluate_aime_2024_i.py  evaluate_em.py  evaluate_factcheck.py  fact-checking.sh  falcon-7b-instruct_finetuned_model_outputs.npy  falcon-7b-instruct_pretrained_model_outputs.npy  falcon.py  fewshot-results.json  finetune.py  finetune_factcheck_openai.py  finetune_summarization.py  finetune_summarization_bin.py  gpt3.5-fewshot-results.json  gpt3.5.py  gpt_zeroshot_outputs.npy  mistral.py  oneshot-results.json  zero-shot.py  zeroshot-results.json  zeroshot.py
