[tool.poetry]
name = "lab-scale-ai"
version = "0.1.0"
description = ""
authors = ["rhusiev <63148080+rhusiev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "^2.1.0"
accelerate = "^1.0.1"
bert-score = "^0.3.13"
bitsandbytes = "^0.44.1"
datasets = "^3.0.1"
evaluate = "^0.4.3"
huggingface-hub = "^0.25.2"
numpy = "^1.0"
openai = "^1.51.2"
peft = "^0.13.2"
rouge-score = "^0.1.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
torch = "^2.4.1"
transformers = "^4.45.2"
trl = "^0.11.3"
wandb = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
